# seasenselib

./: .buildinfo  .gitignore  Makefile  Pipfile  README.md  about.html  ctdtools.html  environment.yml  genindex.html  index.html  installation.html  objects.inv  overview.html  py-modindex.html  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py  user_guide.html
.github/workflows/: ci.yml  docs.yml  docs_deploy.yml
_modules/: index.html
_modules/ctd_tools/: ctd_parameters.html
_modules/ctd_tools/modules/: calculator.html  plotter.html  subsetter.html  writer.html
_modules/ctd_tools/plotters/: base.html  profile_plotter.html  time_series_plotter.html  time_series_plotter_multi.html  ts_diagram_plotter.html
_modules/ctd_tools/processors/: base.html  resample_processor.html  statistics_processor.html  subset_processor.html
_modules/ctd_tools/readers/: base.html  csv_reader.html  netcdf_reader.html  nortek_ascii_reader.html  rbr_ascii_reader.html  rbr_rsk_auto_reader.html  rbr_rsk_reader.html  sbe_cnv_reader.html
_modules/ctd_tools/writers/: base.html  csv_writer.html  excel_writer.html  netcdf_writer.html
_modules/seasenselib/plotters/: base.html  profile_plotter.html  time_series_plotter.html  time_series_plotter_multi.html  ts_diagram_plotter.html
_modules/seasenselib/processors/: base.html  resample_processor.html  statistics_processor.html  subset_processor.html
_modules/seasenselib/readers/: base.html  csv_reader.html  netcdf_reader.html  nortek_ascii_reader.html  rbr_ascii_reader.html  rbr_rsk_auto_reader.html  rbr_rsk_reader.html  sbe_cnv_reader.html
_modules/seasenselib/writers/: base.html  csv_writer.html  excel_writer.html  netcdf_writer.html
_sources/: about.rst.txt  ctdtools.rst.txt  installation.rst.txt  overview.rst.txt
ctd_tools/: __init__.py  __main__.py  ctd_parameters.py  parameters.py
ctd_tools/core/: format_detection.py  io_manager.py
ctd_tools/modules/: plotter.py  reader.py  subsetter.py  writer.py
ctd_tools/plotters/: base.py  profile_plotter.py  time_series_plotter.py  time_series_plotter_multi.py  ts_diagram_plotter.py
ctd_tools/readers/: __init__.py  adcp_matlab_rdadcp_reader.py  adcp_matlab_reader.py  adcp_matlab_reader_efw.py  adcp_matlab_uhhds_reader.py  base.py  csv_reader.py  netcdf_reader.py  nortek_ascii_reader.py  rbr_ascii_reader.py  rbr_matlab_legacy_reader.py  rbr_matlab_rsktools_reader.py  rbr_rsk_auto_reader.py  rbr_rsk_legacy_reader.py  rbr_rsk_reader.py  rcm_matlab_reader.py  registry.py  sbe_ascii_reader.py  sbe_cnv_reader.py  seasun_tob_reader.py
ctd_tools/writers/: netcdf_writer.py
docs/source/: api_reference.rst  conf.py  ctdtools.rst  index.rst  installation.rst  overview.rst  user_guide.rst
examples/: sea-practical-2023.cnv
examples/moor/raw/msm76_2018/aquadopp/: DSC18_477102.aqd  DSC18_477102.dia  DSC18_477102.hdr
examples/moor/raw/msm76_2018/sbe16/: DSE18_sbe16_2419.cnv
notebooks/: demo.ipynb  demo_mooring.ipynb
seasenselib/: __init__.py  api.py
seasenselib/plotters/: api.py
seasenselib/writers/: netcdf_writer.py
src/: main.py
src/modules/: plotter.py  reader.py  writer.py
tests/: test_readers_completeness.py  test_subsetter.py
(+1 files in other folders)
